# cove

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  main.go  settings.json  tygo.yaml
.github/workflows/: release.yml
docs/: API.md
electron/: .prettierrc  README.md  components.json  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
electron/src/: App.svelte
electron/src/lib/: api.ts  utils.ts
electron/src/lib/player/: hlsSession.svelte.ts  progressSaver.svelte.ts  subtitleCues.svelte.ts
electron/src/lib/stores/: settings.ts
electron/src/main/: index.ts
electron/src/preload/: index.d.ts
electron/src/renderer/: index.html
flatpak/: cove.sh  io.github.arcadyi.Cove.desktop  io.github.arcadyi.Cove.metainfo.xml  io.github.arcadyi.Cove.yml  io.github.coveninja.Cove.desktop  io.github.coveninja.Cove.metainfo.xml  io.github.coveninja.Cove.yml
internal/addons/: addon.go  addon_test.go  introdb.go  introdb_test.go  justwatch.go  manager.go  quality_test.go  store.go
internal/clientsession/: clientsession.go
internal/discover/: discover.go  discover_test.go  noop.go
internal/nuvio/: handlers.go  logging_test.go  manager.go  nuvio.go  repo.go  repo_test.go  runtime.go  runtime_test.go  store.go  vendored.go  vendored_test.go  weburl.go  weburl_test.go
internal/player/: hls.go  player.go  priorityUnix.go  priorityWindows.go
internal/profiles/: profiles.go  profiles_test.go
internal/settings/: settings.go  settings_test.go
internal/subtitles/: subtitles.go
internal/supabase/: client.go  handlers.go  noop.go  sync.go
internal/tmdb/: tmdb.go  tmdb_test.go
internal/updater/: updater.go  updater_test.go
internal/utils/: main.go  paths.go  utils_test.go
packaging/: PKGBUILD
packaging/windows/: cove.nsi
qt/: CMakeLists.txt
qt/qml/: main.qml
qt/src/: MpvObject.cpp  MpvObject.h  main.cpp
web/: .eslintcache  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
web/src/: App.svelte  main.ts
web/src/assets/: app.css
web/src/components/: AccountPopover.svelte  AuthDialog.svelte  ComingSoon.svelte  ContinueWatching.svelte  DarkModeButton.svelte  ExploreCard.svelte  ExploreCarousel.svelte  ExplorePage.svelte  InsightsPage.svelte  MediaCard.svelte  MediaExpandedModal.svelte  MediaHoverCard.svelte  MyListPage.svelte  OnboardingPage.svelte  Player.svelte  PlayerSimple.svelte  QueryPage.svelte  SettingsPage.svelte  SplashScreen.svelte  StarRating.svelte  StreamsList.svelte  TopBar.svelte  Upcoming.svelte  UpdateModal.svelte
web/src/lib/: api.ts  discoveryAlgorithms.ts  streamSelection.ts  supabase.ts  utils.ts
web/src/lib/types/: auth.ts  (+7 more)
(+61 files in other folders)
